<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/Container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:orientation="horizontal"
        android:layout_marginStart="7dp"
        android:layout_marginEnd="7dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ConvertFrom"
                android:textColor="#000" />

            <Spinner
                android:id="@+id/FromCurrency"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:entries="@array/currencies"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/Nominal"
                android:textColor="#000" />

            <EditText
                android:id="@+id/Nominal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#000"
                android:hint="@string/Nominal"
                android:inputType="numberDecimal"
                android:text="@string/DefaultValue"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ConvertTo"
                android:textColor="#000" />

            <Spinner
                android:id="@+id/ToCurrency"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:entries="@array/currencies"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/Date"
                android:textColor="#000" />

            <EditText
                android:id="@+id/Date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#000"
                android:hint="@string/Date"
                android:focusable="false"
                android:clickable="true"
                />

        </LinearLayout>

    </LinearLayout>


    <Button
        android:id="@+id/ConvertBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFDD00"
        android:layout_marginStart="7dp"
        android:layout_marginEnd="7dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/Container"
        android:text="@string/Convert"
        />

    <TextView
        android:id="@+id/Answer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="7dp"
        android:layout_marginEnd="7dp"
        app:layout_constraintTop_toBottomOf="@id/ConvertBtn"
        android:textColor="#000"
        android:gravity="center"/>

</android.support.constraint.ConstraintLayout>